[package]
name = "aeonai_calcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9.0"
tonic = "0.6.2"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

[build-dependencies]
tonic-build = "0.6.2"

